--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height:100%;
+  font-size: 1rem !important;
+  font-family: "Consolas" !important;
 }
 
 code {
