--- a/src/index.scss
+++ b/src/index.scss
@@ -2,12 +2,12 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height:100%;
-  font-size: 1rem !important;
+  height: 100%;
+  font-size: 0.75rem !important;
   font-family: "Consolas" !important;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
