--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,13 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
+  min-height: 100%;
+  position: relative;
   font-size: 0.75rem !important;
   font-family: "Consolas" !important;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
