--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  font-family: "Consolas" !important;
 }
 
 body {
@@ -10,4 +11,9 @@ body {
   position: relative;
   font-size: 0.75rem !important;
   font-family: "Consolas" !important;
+}
+
+@font-face {
+  font-family: "Consolas" !important;
+  src: local("Consolas"), url('https://themes.googleusercontent.com/font?kit=tU9YDI746eMeg42M7b80TPesZW2xOQ-xsNqO47m55DA') format('woff');
 }
